objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <description>This is the primary competitor that we are facing in this opportunity</description>
        <inlineHelpText>This is the primary competitor that we are facing in this opportunity</inlineHelpText>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AcelQ</fullName>
                </value>
                <value>
                    <fullName>Amplify DX</fullName>
                </value>
                <value>
                    <fullName>AutoRabit</fullName>
                </value>
                <value>
                    <fullName>Blue Canvas</fullName>
                </value>
                <value>
                    <fullName>Copado Essentials (ClickDeploy)</fullName>
                </value>
                <value>
                    <fullName>DevOps Center</fullName>
                </value>
                <value>
                    <fullName>Eggplant</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>Home Grown</fullName>
                </value>
                <value>
                    <fullName>Leapwork</fullName>
                </value>
                <value>
                    <fullName>Metazoa</fullName>
                </value>
                <value>
                    <fullName>Metazoa Snapshot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prodly</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>Ranorex</fullName>
                </value>
                <value>
                    <fullName>Robot Framework</fullName>
                </value>
                <value>
                    <fullName>Salesforce DX</fullName>
                </value>
                <value>
                    <fullName>Saucelabs</fullName>
                </value>
                <value>
                    <fullName>Selenium</fullName>
                </value>
                <value>
                    <fullName>Smartbear</fullName>
                </value>
                <value>
                    <fullName>Tricentis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Professional_Services__c</fullName>
        <inlineHelpText>Roll-Up Summary: Count of Opportunity Products related to this Opportunity where Engagement Type = Professional Services</inlineHelpText>
        <label>Products: Professional Services</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Engagement_Type__c</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Products_Program_Architect__c</fullName>
        <inlineHelpText>Roll-Up Summary: Count of Opportunity Products related to this Opportunity where Engagement Type = Program Architect</inlineHelpText>
        <label>Products: Program Architect</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Engagement_Type__c</field>
            <operation>equals</operation>
            <value>Program Architect</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Products_Strategic_Services__c</fullName>
        <inlineHelpText>Roll-Up Summary: Count of Opportunity Products related to this Opportunity where Engagement Type = Strategic Services</inlineHelpText>
        <label>Products: Strategic Services</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Engagement_Type__c</field>
            <operation>equals</operation>
            <value>Strategic Services</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>Project_End_Date__c - Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <displayFormat>{YYYY}{MM}{000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Kick_off_Date__c</fullName>
        <formula>CloseDate +7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Close Date +7. Used for mapping through to the Mission Control Project</inlineHelpText>
        <label>Project Kick-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Done_Date__c</fullName>
        <description>This Field is created as part of Qentinel data Migration</description>
        <label>Proposal Done Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_End_Date__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.SBQQ__EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Start_Date__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.SBQQ__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Term_in_Months__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.PS_CPQ_Term_in_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Term in Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewable_Product_Discount__c</fullName>
        <label>Renewable Product Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewable_Product_Discounts__c</fullName>
        <formula>1 - SBQQ__PrimaryQuote__r.Total_Renewable_Product_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewable Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <label>Renewal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reportable_ACV__c</fullName>
        <description>If no Quotes have been created for this Opportunity yet, this is equal to the manually-entered Amount. Once a Primary Quote is created for this Opportunity, this equals the 1st Year ACV.</description>
        <formula>IF(
ISBLANK(SBQQ__PrimaryQuote__c)=TRUE,
IF(
X1st_Year_ACV_only__c=0,
Amount,
X1st_Year_ACV_only__c
),
X1st_Year_ACV_only__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If no Quotes have been created for this Opportunity yet, this is equal to the manually-entered Amount. Once a Primary Quote is created for this Opportunity, this equals the 1st Year ACV.</inlineHelpText>
        <label>Reportable ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAL_Acceptance_Age__c</fullName>
        <formula>SAL_Acceptance_Date__c -  SQL_Transfer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SQL Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAL_Acceptance_Date__c</fullName>
        <label>SAL Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAL_Age__c</fullName>
        <description>Salesforce Age to see how long it takes to close a deal.</description>
        <formula>IF(IsClosed = False, TODAY() - SAL_Acceptance_Date__c,  CloseDate - SAL_Acceptance_Date__c)</formula>
        <inlineHelpText>Salesforce Age to see how long it takes to close a deal.</inlineHelpText>
        <label>SAL Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAL_Forecast_Date__c</fullName>
        <label>SAL Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SE_Confidence_Level__c</fullName>
        <label>SE Confidence Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Confidence</fullName>
                </value>
                <value>
                    <fullName>Low Confidence</fullName>
                </value>
                <value>
                    <fullName>High Confidence</fullName>
                </value>
                <value>
                    <fullName>Concerned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SE_Hours_Invested__c</fullName>
        <label>SE Hours Invested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Transfer_Date__c</fullName>
        <label>SQL Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRB_Month__c</fullName>
        <inlineHelpText>The first day of the month the contract start date falls on.</inlineHelpText>
        <label>Starting Copado AOV Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Starting Copado AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_AE_Vertical__c</fullName>
        <formula>Owner.Vertical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales AE Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person assigned to opportunity to support.</inlineHelpText>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scoping_1__c</fullName>
        <description>Name of whoever is responsible for scoping.</description>
        <label>Scoping 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoping_2__c</fullName>
        <label>Scoping 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoping_3__c</fullName>
        <label>Scoping 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Competitor__c</fullName>
        <description>This is the secondary competitor that we are facing in this opportunity</description>
        <inlineHelpText>This is the secondary competitor that we are facing in this opportunity</inlineHelpText>
        <label>Secondary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AcelQ</fullName>
                </value>
                <value>
                    <fullName>Amplify DX</fullName>
                </value>
                <value>
                    <fullName>AutoRabit</fullName>
                </value>
                <value>
                    <fullName>Blue Canvas</fullName>
                </value>
                <value>
                    <fullName>Copado Essentials (ClickDeploy)</fullName>
                </value>
                <value>
                    <fullName>DevOps Center</fullName>
                </value>
                <value>
                    <fullName>Eggplant</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>Home Grown</fullName>
                </value>
                <value>
                    <fullName>Leapwork</fullName>
                </value>
                <value>
                    <fullName>Metazoa</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prodly</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>Ranorex</fullName>
                </value>
                <value>
                    <fullName>Robot Framework</fullName>
                </value>
                <value>
                    <fullName>Salesforce DX</fullName>
                </value>
                <value>
                    <fullName>Saucelabs</fullName>
                </value>
                <value>
                    <fullName>Selenium</fullName>
                </value>
                <value>
                    <fullName>Smartbear</fullName>
                </value>
                <value>
                    <fullName>Tricentis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selenium_Minutes__c</fullName>
        <label>Selenium Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Type_Opportunity__c</fullName>
        <label>Service Type Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servicee_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Services_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_ACV__c</fullName>
        <label>Services ACV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Amount__c</fullName>
        <label>Services Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Services_on_Partner_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services on Partner Paper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_type__c</fullName>
        <defaultValue>&quot;Monthly&quot;</defaultValue>
        <label>Subscription type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Professional Edition</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCV_Closed__c</fullName>
        <formula>IF(IsClosed == true, TCV__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV_Lost__c</fullName>
        <formula>IF( AND( IsClosed == true,IsWon == false), TCV__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV_Open__c</fullName>
        <formula>IF(IsClosed == false, TCV__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV_Won__c</fullName>
        <formula>IF( IsWon == true,  TCV__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technical_Functional_Win__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you secured the technical and functional win on this opportunity?</inlineHelpText>
        <label>Technical/Functional Win?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Salesforce Org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Reporting__c</fullName>
        <formula>IF( Trial__c = TRUE, &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial (Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Opportunities (Trial Org)</relationshipLabel>
        <relationshipName>Trial_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Type__c</fullName>
        <label>Trial Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secluded</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Paid POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <formula>NOT(ISBLANK( Trial_Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Cases__c</fullName>
        <inlineHelpText>What are we trying to prove to this customer?</inlineHelpText>
        <label>Use Cases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Prop_ID__c</fullName>
        <label>Value Prop ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_of_Choice__c</fullName>
        <label>Vendor of Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Copado__c</fullName>
        <description>What are the Copado differentiators that would cause this company to choose us over a competitor?</description>
        <inlineHelpText>What are the Copado differentiators that would cause this company to choose us over a competitor?</inlineHelpText>
        <label>Why Copado?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_YR_ARR__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.X1st_YR_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st YR ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.X1st_Year_ACV_EC2__c + SBQQ__PrimaryQuote__r.One_Time_ACV__c</formula>
        <inlineHelpText>Includes ACV &amp; services cost for 1st year</inlineHelpText>
        <label>1st Year Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Year_ACV_only__c</fullName>
        <description>From Primary Quote, the sum of Segment 1 (first year) subscription License products + the sum of List (non-prorated) Percent of Total products.</description>
        <formula>SBQQ__PrimaryQuote__r.X1st_Year_ACV_EC2__c</formula>
        <inlineHelpText>From Primary Quote, the sum of Segment 1 (first year) subscription License products + the sum of List (non-prorated) Percent of Total products.</inlineHelpText>
        <label>1st Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Year_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.X2nd_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Year_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.X3rd_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4th_Year_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.X4th_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4th Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X5th_Year_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.X5th_Year_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5th Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X6Sense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>6Sense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Generate_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field to TRUE to auto-generate the Project</description>
        <inlineHelpText>Set this field to TRUE to auto-generate the Project</inlineHelpText>
        <label>Generate Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Generation_Method__c</fullName>
        <description>Identifies whether the Project will be auto-generated from the Opportunity Project Template or the Product Milestones</description>
        <inlineHelpText>Identifies whether the Project will be auto-generated from the Opportunity Project Template or the Product Milestones</inlineHelpText>
        <label>Generation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                    <default>true</default>
                    <label>Products</label>
                </value>
                <value>
                    <fullName>Products - No Duplicates</fullName>
                </value>
                <value>
                    <fullName>Base Template + Products</fullName>
                </value>
                <value>
                    <fullName>Base Template + Products - No Duplicates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Project_Start_Date__c</fullName>
        <description>Identifies the date that will be used for scheduling the Project</description>
        <inlineHelpText>Identifies the date that will be used for scheduling the Project</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Project__c.amc__Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Opportunities Using Template</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>